# VOID-Linux-ai-assistant

./: .gitignore  LICENSE  README.md  app.py  config.py  install.sh  install_ollama.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.py  start.sh
.github/workflows/: ci.yml
apps/backend/: pyproject.toml  void.db
apps/backend/src/: db.py  main.py
apps/backend/src/models/: chat.py  settings.py
apps/backend/src/routers/: ai.py  chat.py  conversations.py  settings.py  tools.py
apps/backend/src/tools/: builtin.py  manager.py  registry.py
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
assets/: enma.desktop
core/: llm_client.py  worker.py
data/: file_index.db
development/: 00-development-plan.md  01-phase-0-foundation.md  02-phase-1-core-ui.md  03-phase-2-local-ai.md  04-phase-3-tools.md  05-phase-4-knowledge.md  06-phase-5-memory.md  07-phase-6-voice.md  08-phase-7-project-intelligence.md  09-phase-8-automation.md  10-phase-9-plugin-sdk.md  11-phase-10-linux.md  12-phase-11-multimodal.md  13-phase-12-polish.md
docs/: AI-Pipeline.md  API-Documentation.md  Agent-System.md  Architecture-Descision-Records-(ADRs).md  Database-Design.md  PRD.md  RAG-Documentation.md  Roadmap.md  Security.md  System-Architecture.md  Tech-stack.md  Testing.md  Tool-Calling.md  Vision.md  Voice-System.md
security/: guardrails.py
tools/: system_ops.py
(+15 files in other folders)
