[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.139.2",
    "openai>=2.46.0",
    "qdrant-client>=1.18.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
